
PIG-5269: MapReduceLauncher and MRJobStats imports org.python.google.common.collect.Lists instead of org.google.common.collect.Lists (nkollar via szita)

PIG-4700: Enable progress reporting for Tasks in Tez (satishsaley via rohini)

PIG-5251: Bump joda-time to 2.9.9 (dbist13 via rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-5311: POReservoirSample fails for more than Integer.MAX_VALUE records (rohini)

PIG-3864: ToDate(userstring, format, timezone) computes DateTime with strange handling of Daylight Saving Time with location based timezones (daijy via rohini)

PIG-5312: Uids not set in inner schemas after UNION ONSCHEMA (tmwoodruff via knoguchi)

PIG-5300: hashCode for Bag needs to be order independent (knoguchi)

PIG-5318: Unit test failures on Pig on Spark with Spark 2.2 (nkollar via szita)

PIG-5201: Null handling on FLATTEN (knoguchi)

PIG-5315: pig.script is not set for scripts run via PigServer (satishsaley via rohini)

PIG-5310: MergeJoin throwing NullPointer Exception (satishsaley via rohini)

PIG-5314: Abort method is not implemented in PigProcessor (satishsaley via rohini)

PIG-5307: NPE in TezOperDependencyParallelismEstimator (rohini)

PIG-5272: BagToTuple output schema is incorrect (juen1jp via rohini)

PIG-5271: StackOverflowError when compiling in Tez mode (with union and replicated join) (knoguchi)

PIG-5299: PartitionFilterOptimizer failing at compile time (knoguchi)

PIG-5290: User Cache upload contention can cause job failures (xkrogen via rohini)

PIG-5293: Suspicious code as missing `this' for a member (lifove via daijy)

PIG-5294: Spark unit tests are always run in spark1 mode (szita)

PIG-5277: Spark mode is writing nulls among tuples to the output (workaround) (szita)

PIG-5283: Configuration is not passed to SparkPigSplits on the backend (szita)

PIG-5284: Fix flakyness introduced by PIG-3655 (szita)

PIG-5278: Unit test failures because of PIG-5264 (nkollar via rohini)

PIG-5276: building "jar" should not call "clean" (nkollar via szita)
